feat(03-workflow-runners): modified echo with indentation

--- a/.github/workflows/03-workflow-runners.yaml
+++ b/.github/workflows/03-workflow-runners.yaml
@@ -7,6 +7,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Show OS
-        run: |
-           echo: "This jobs runs on ubuntu runner"
-           echo: "Runner OS: $RUNNER_OS"
+        run: echo "This jobs runs on ubuntu runner. Runner OS $RUNNER_OS"
