--- a/.github/workflows/03-workflow-runners.yaml
+++ b/.github/workflows/03-workflow-runners.yaml
@@ -14,3 +14,8 @@ jobs:
       - name: Show OS
         shell: bash
         run: echo "This jobs runs on Windows runner. Runner OS $RUNNER_OS"
+  mac-echo:
+    runs-on: macos-latest
+    steps:
+      - name: Show OS
+        run: echo "This jobs runs on MacOS runner. Runner OS $RUNNER_OS"
