--- a/.github/workflows/06-contexts.yaml
+++ b/.github/workflows/06-contexts.yaml
@@ -1,6 +1,8 @@
 name: 06 - Context
 
-on: push
+on:
+  push:
+  workflow_dispatch:
 
 jobs:
     echo-data:
@@ -17,4 +19,3 @@ jobs:
               echo "Run number: ${{ github.run_number }}"
           - name: Retrieve Variable
             run: echo "Variable value ${{ vars.MY_VAR }}"
-            
