--- a/.github/workflows/08-variables.yaml
+++ b/.github/workflows/08-variables.yaml
@@ -21,7 +21,7 @@ jobs:
                 STEP_VAR2: "I am another step env var"
               run: |
                  echo "Step env var: ${{ env.STEP_VAR }}"
-                 echo "Step env var2: ${{ ENV.STEP_VAR2 }}"
+                 echo "Step env var2: ${{ env.STEP_VAR2 }}"
                  echo "Job env var: ${{ env.JOB_VAR }}"
                  echo "Workflow env var: ${{ env.WORKFLOW_VAR }}"
                  echo "Overwritten env var: ${{ env.OVERWRITTEN }}"
