--- a/.github/workflows/09-functions.yaml
+++ b/.github/workflows/09-functions.yaml
@@ -1,7 +1,6 @@
 name: 09 - Using Functions
 
 on:
-    pull_request:
     workflow_dispatch:
 
 jobs:
@@ -20,8 +19,8 @@ jobs:
               run: echo "I will print if any previous steps fails."
             - name: I will execute
               if: ${{ !cancelled() }}
-              name: echo "I will always print, except when the workflow is cancelled."
+              run: echo "I will always print, except when the workflow is cancelled."
             - name: I will execute when cancelled
               if: ${{ cancelled() }}
-              name: echo "I will print if the workflow has been cancelled."
+              run: echo "I will print if the workflow has been cancelled."
 
