--- a/.github/workflows/11-inputs.yaml
+++ b/.github/workflows/11-inputs.yaml
@@ -21,7 +21,7 @@ on:
         description: Release from which to build and deploy
 
 jobs:
-  echo:
+  build:
     runs-on: ubuntu_latest
     steps:
         - name: Build
@@ -29,7 +29,7 @@ jobs:
   deploy:
     runs-on: ubuntu_latest
     if: ${{ inputs }}
-    environment: ${{ inputs.target }}
+    environment: build
     steps:
         - name: Deploy
           run: Deploying to ${{ inputs.target }}
